Added navigation bar

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </div>
         <div class="slider__left-button"><span>&lt;</span></div>
         <div class="slider__right-button"><span>&gt;</span></div>
+        <div class="slider__nav"></div>
     </div>
     
     <!-- <script src="polyfill.js"></script> -->
