--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <div class="slider__slide">
                         <div class="slider__slide-content">
                             <span class="slider__slide-content-text_hidden">
-                                «Будущее начинается тогда, когда заканчивается прошлое. Если Ваше прошлое не закончилось – будущее никогда не начнется» – Джордж Бернард Шоу
+                                «Будущее начинается тогда, когда заканчивается прошлое. Если Ваше прошлое не закончилось – будущее никогда не начнется» – Зигмунд Фрейд
                             </span>
                             <span class="slider__slide-content-text_visible">кликабельно</span>
                         </div>
@@ -55,7 +55,7 @@
                     <div class="slider__slide">
                             <div class="slider__slide-content">
                                 <span class="slider__slide-content-text_hidden">
-                                    Все персонажи вымышлены и любые совпадения случайны
+                                    Все персонажи вымышлены, любые совпадения случайны
                                 </span>
                                 <span class="slider__slide-content-text_visible">кликабельно</span>
                             </div>
