--- a/index.html
+++ b/index.html
@@ -53,9 +53,17 @@
                         </div>
                     </div>
                     <div class="slider__slide">
+                        <div class="slider__slide-content">
+                            <span class="slider__slide-content-text_hidden">
+                                «Рыночная экономика – это одна большая финансовая пирамида. Тут все друг другу врут. А когда приходит время «вскрывать карты» – наступает очередной финансовый кризис.» – Уоррен Баффет
+                            </span>
+                            <span class="slider__slide-content-text_visible">кликабельно</span>
+                        </div>
+                    </div>
+                    <div class="slider__slide">
                             <div class="slider__slide-content">
                                 <span class="slider__slide-content-text_hidden">
-                                    Все персонажи вымышлены, любые совпадения случайны
+                                    Все персонажи вымышленные, любые совпадения случайны
                                 </span>
                                 <span class="slider__slide-content-text_visible">кликабельно</span>
                             </div>
