--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div class="slider__slide">
                             <div class="slider__slide-content">
                                 <span class="slider__slide-content-text_hidden">
-                                    Все персонажи вымышленные, любые совпадения случайны
+                                    Все цитаты и персонажи вымышленные, любые совпадения случайны
                                 </span>
                                 <span class="slider__slide-content-text_visible">кликабельно</span>
                             </div>
