--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                             <span class="slider__slide-content-text_hidden">
                                 «Будущее начинается тогда, когда заканчивается прошлое. Если Ваше прошлое не закончилось – будущее никогда не начнется» – Зигмунд Фрейд
                             </span>
-                            <span class="slider__slide-content-text_visible">Можно кликнуть по слайду и получить +10 очков к мудрости.</span>
+                            <span class="slider__slide-content-text_visible">Можно кликнуть по слайду и получить +11 очков к мудрости.</span>
                         </div>
                     </div>
                     <div class="slider__slide">
@@ -25,7 +25,7 @@
                             <span class="slider__slide-content-text_hidden">
                                 «Если кому-то нравится ошибаться, то кто я такой чтобы лишать его этого удовольствия» – Оскар Уайльд
                             </span>
-                            <span class="slider__slide-content-text_visible">Можно кликнуть по слайду и получить +10 очков к мудрости.</span>
+                            <span class="slider__slide-content-text_visible">Можно кликнуть по слайду и получить +8 очков к мудрости.</span>
                         </div>
                     </div>
                     <div class="slider__slide">
@@ -33,7 +33,7 @@
                             <span class="slider__slide-content-text_hidden">
                                 «Тот, кто верит в свободу – раб своей веры» – А.Эйнштейн
                             </span>
-                            <span class="slider__slide-content-text_visible">Можно кликнуть по слайду и получить +10 очков к мудрости.</span>
+                            <span class="slider__slide-content-text_visible">Можно кликнуть по слайду и получить +4 очка к мудрости.</span>
                         </div>
                     </div>
                     <div class="slider__slide">
@@ -41,7 +41,7 @@
                             <span class="slider__slide-content-text_hidden">
                                 «Идеальный дьявол – тот, которого нет, а его функция выполняется» – Генрих Альтшуллер.
                             </span>
-                            <span class="slider__slide-content-text_visible">Можно кликнуть по слайду и получить +10 очков к мудрости.</span>
+                            <span class="slider__slide-content-text_visible">Можно кликнуть по слайду и получить +6 очков к мудрости.</span>
                         </div>
                     </div>
                     <div class="slider__slide">
@@ -49,7 +49,7 @@
                             <span class="slider__slide-content-text_hidden">
                                 «Если вы не тратите энергию на созидание – она уходит на разрушение» – Пьер Кюри
                             </span>
-                            <span class="slider__slide-content-text_visible">Можно кликнуть по слайду и получить +10 очков к мудрости.</span>
+                            <span class="slider__slide-content-text_visible">Можно кликнуть по слайду и получить +7 очков к мудрости.</span>
                         </div>
                     </div>
                     <div class="slider__slide">
@@ -57,7 +57,7 @@
                             <span class="slider__slide-content-text_hidden">
                                 «Рыночная экономика – это одна большая финансовая пирамида. Тут все друг другу врут. А когда приходит время «вскрывать карты» – наступает очередной финансовый кризис.» – Уоррен Баффет
                             </span>
-                            <span class="slider__slide-content-text_visible">Можно кликнуть по слайду и получить +10 очков к мудрости.</span>
+                            <span class="slider__slide-content-text_visible">Можно кликнуть по слайду и получить +12 очков к мудрости.</span>
                         </div>
                     </div>
                     <div class="slider__slide">
